--- a/llamafile/query.ipynb
+++ b/llamafile/query.ipynb
@@ -76,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llamaindex_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
