--- a/llamafile/index.ipynb
+++ b/llamafile/index.ipynb
@@ -201,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llamaindex_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
